--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,27 @@ name = "crypto-predictor-system"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.14"
-dependencies = []
+requires-python = ">=3.12"
+dependencies = [
+    "loguru",
+    "quixstreams",
+    "pydantic",
+    "pydantic-settings",
+    "aiohttp",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.0",
+    "pytest-asyncio>=0.24",
+    "pytest-cov>=6.0",
+    "pytest-mock>=3.14",
+]
 
 [tool.uv.workspace]
 members = [
     "services/trades",
 ]
+
+[tool.uv.sources]
+trades = { workspace = true }
